# DE-Shaw

./: CONTRIBUTING.md  Makefile  README.md  generate_phase1.py
frontend/: Dockerfile  README.md  index.html  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
infra/deployment/: README.md  deploy.sh  rollback.sh
infra/docker/: README.md  base-node.Dockerfile  base-python.Dockerfile  docker-compose.override.yml.example  docker-compose.yml
services/ai_reasoning_engine/: Dockerfile  README.md  docker-compose.yml  main.py  requirements.txt
services/analytics_batch/: Dockerfile  README.md  docker-compose.yml  requirements.txt
services/api_gateway/: Dockerfile  README.md  docker-compose.yml  exception_handlers.py  health.py  main.py
services/auth/: Dockerfile  README.md  main.py
services/commit_analyzer/: Dockerfile  README.md  docker-compose.yml  main.py  requirements.txt
services/dashboard_backend/: Dockerfile  README.md  docker-compose.yml  main.py  requirements.txt
services/failure_analyzer/: Dockerfile  README.md  docker-compose.yml  main.py  requirements.txt
services/git_integration/: Dockerfile  README.md  docker-compose.yml  main.py  requirements.txt
services/llm_orchestration/: Dockerfile  README.md  docker-compose.yml  main.py  requirements.txt
services/log_parser/: Dockerfile  README.md  main.py
services/notifications/: Dockerfile  README.md  docker-compose.yml  main.py  (+1 more)
shared/: config.py  logging_engine.py
shared/logging_engine/: README.md  __init__.py  config.py  context.py  middleware.py  pyproject.toml  redaction.py
(+235 files in other folders)
