[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "testlens-logging"
version = "0.1.0"
description = "Shared structured logging engine for TestLens services"
requires-python = ">=3.12"
dependencies = [
    "structlog>=23.2.0",
    "python-json-logger>=2.0.7",
    "fastapi>=0.104.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.1",
    "httpx>=0.25.1",
]
